--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
 
         <!-- TEST DEPENDENCIES -->
 
